--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,42 @@
     transform: rotate(360deg);
   }
 }
+
+input{
+  padding: 10px;
+  width:  90%;
+  font-size: medium;
+}
+label{
+  padding-top: 10px;
+}
+/* Login CSS */
+
+.loginForm{
+  width: 250px;
+  border: 1px solid rgba(0,0,0,0.1);
+  box-shadow:  0px 1px 10px 1px rgba(0,0,0,0.1);
+  margin: 50px auto;
+  padding: 20px;
+}
+.loginTitle{
+  padding: 10px;
+  padding-top: 0;
+  font-size: xx-large;
+  font-weight: 300;
+  margin-bottom: 10px;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+}
+.loginButton{
+  padding: 10px;
+  margin: 10px;
+  font-size: large;
+  background-color: #24a0ed;
+  border: 0;
+  color:  white;
+  letter-spacing: 0.15rem;
+  cursor: pointer;
+}
+.loginButton:hover{
+  background-color: #01579b;
+}
